[project]
name = "model-server"
version = "0.1.0"
description = "A model server for EchoSentinel"
authors = [
    { name = "Wangl", email = "1770221228@qq.com" },
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "transformers>=4.51.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "pymongo>=4.12.1",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "opencv-python>=4.11.0.86",
    "dlib>=19.24.8",
    "imutils>=0.5.4",
    "scikit-image>=0.25.2",
    "albumentations==1.1",
    "imgaug>=0.4.0",
    "numpy~=1.21",
    "lmdb>=1.6.2",
    "einops>=0.8.1",
    "tensorboard>=2.19.0",
    "simplejson>=3.20.1",
    "fvcore>=0.1.5.post20221221",
    "efficientnet-pytorch>=0.7.1",
    "kornia>=0.8.1",
    "timm>=1.0.15",
    "loralib>=0.1.2",
    "seaborn>=0.13.2",
    "flask-sqlalchemy>=3.1.1",
    "pymysql>=1.1.1",
    "modelscope>=1.26.0",
    "qwen-vl-utils>=0.0.11",
    "accelerate>=1.7.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["mod", "modules"] }

