[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.10",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.40",
    "waitress>=3.0.2",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
